fix alignment mismatch between fb and g+ buttons

--- a/assets/css/global.styl
+++ b/assets/css/global.styl
@@ -109,3 +109,5 @@ div.text_page
   pre
     margin-left 20px
 
+.like_buttons
+  margin 14px 40px
